sintactico.output
Estado 69 conflictos: 1 desplazamiento/reducción


Gramática

    0 $accept: program $end

    1 program: "id" "(" ")" "{" declarations statement_list "}"

    2 declarations: declarations "var" identifier_list ";"
    3             | declarations "const" identifier_list ";"
    4             | ε

    5 identifier_list: identifier
    6                | identifier_list "," identifier

    7 identifier: "id"
    8           | "id" "=" expression

    9 statement_list: statement_list statement
   10               | ε

   11 statement: "id" "=" expression ";"
   12          | "{" statement_list "}"
   13          | "if" "(" expression ")" statement "else" statement
   14          | "if" "(" expression ")" statement
   15          | "while" "(" expression ")" statement
   16          | "print" "(" print_list ")" ";"
   17          | "read" "(" read_list ")"

   18 print_list: print_item
   19           | print_list "," print_item

   20 print_item: expression
   21           | "string"

   22 read_list: "id"
   23          | read_list "," "id"

   24 expression: expression "+" expression
   25           | expression "-" expression
   26           | expression "*" expression
   27           | expression "/" expression
   28           | "-" expression
   29           | "(" expression ")"
   30           | "id"
   31           | "numero"


Terminales con las reglas donde aparecen

    $end (0) 0
    error (256)
    "id" <cadena> (258) 1 7 8 11 22 23 30
    "var" (259) 2
    "const" (260) 3
    "print" (261) 16
    "if" (262) 13 14
    "else" (263) 13
    "read" (264) 17
    "while" (265) 15
    "+" (266) 24
    "-" (267) 25 28
    "," (268) 6 19 23
    "*" (269) 26
    "/" (270) 27
    "(" (271) 1 13 14 15 16 17 29
    ")" (272) 1 13 14 15 16 17 29
    "{" (273) 1 12
    "}" (274) 1 12
    "numero" <cadena> (275) 31
    ";" (276) 2 3 11 16
    "string" <cadena> (277) 21
    "=" (278) 8 11
    UMINUS (279)


No terminales con las reglas donde aparecen

    $accept (25)
        on left: 0
    program (26)
        on left: 1
        on right: 0
    declarations (27)
        on left: 2 3 4
        on right: 1 2 3
    identifier_list (28)
        on left: 5 6
        on right: 2 3 6
    identifier (29)
        on left: 7 8
        on right: 5 6
    statement_list (30)
        on left: 9 10
        on right: 1 9 12
    statement (31)
        on left: 11 12 13 14 15 16 17
        on right: 9 13 14 15
    print_list (32)
        on left: 18 19
        on right: 16 19
    print_item (33)
        on left: 20 21
        on right: 18 19
    read_list (34)
        on left: 22 23
        on right: 17 23
    expression <entero> (35)
        on left: 24 25 26 27 28 29 30 31
        on right: 8 11 13 14 15 20 24 25 26 27 28 29


Estado 0

    0 $accept: • program $end

    "id"  desplazar e ir al estado 1

    program  ir al estado 2


Estado 1

    1 program: "id" • "(" ")" "{" declarations statement_list "}"

    "("  desplazar e ir al estado 3


Estado 2

    0 $accept: program • $end

    $end  desplazar e ir al estado 4


Estado 3

    1 program: "id" "(" • ")" "{" declarations statement_list "}"

    ")"  desplazar e ir al estado 5


Estado 4

    0 $accept: program $end •

    $default  aceptar


Estado 5

    1 program: "id" "(" ")" • "{" declarations statement_list "}"

    "{"  desplazar e ir al estado 6


Estado 6

    1 program: "id" "(" ")" "{" • declarations statement_list "}"

    $default  reduce usando la regla 4 (declarations)

    declarations  ir al estado 7


Estado 7

    1 program: "id" "(" ")" "{" declarations • statement_list "}"
    2 declarations: declarations • "var" identifier_list ";"
    3             | declarations • "const" identifier_list ";"

    "var"    desplazar e ir al estado 8
    "const"  desplazar e ir al estado 9

    $default  reduce usando la regla 10 (statement_list)

    statement_list  ir al estado 10


Estado 8

    2 declarations: declarations "var" • identifier_list ";"

    "id"  desplazar e ir al estado 11

    identifier_list  ir al estado 12
    identifier       ir al estado 13


Estado 9

    3 declarations: declarations "const" • identifier_list ";"

    "id"  desplazar e ir al estado 11

    identifier_list  ir al estado 14
    identifier       ir al estado 13


Estado 10

    1 program: "id" "(" ")" "{" declarations statement_list • "}"
    9 statement_list: statement_list • statement

    "id"     desplazar e ir al estado 15
    "print"  desplazar e ir al estado 16
    "if"     desplazar e ir al estado 17
    "read"   desplazar e ir al estado 18
    "while"  desplazar e ir al estado 19
    "{"      desplazar e ir al estado 20
    "}"      desplazar e ir al estado 21

    statement  ir al estado 22


Estado 11

    7 identifier: "id" •
    8           | "id" • "=" expression

    "="  desplazar e ir al estado 23

    $default  reduce usando la regla 7 (identifier)


Estado 12

    2 declarations: declarations "var" identifier_list • ";"
    6 identifier_list: identifier_list • "," identifier

    ","  desplazar e ir al estado 24
    ";"  desplazar e ir al estado 25


Estado 13

    5 identifier_list: identifier •

    $default  reduce usando la regla 5 (identifier_list)


Estado 14

    3 declarations: declarations "const" identifier_list • ";"
    6 identifier_list: identifier_list • "," identifier

    ","  desplazar e ir al estado 24
    ";"  desplazar e ir al estado 26


Estado 15

   11 statement: "id" • "=" expression ";"

    "="  desplazar e ir al estado 27


Estado 16

   16 statement: "print" • "(" print_list ")" ";"

    "("  desplazar e ir al estado 28


Estado 17

   13 statement: "if" • "(" expression ")" statement "else" statement
   14          | "if" • "(" expression ")" statement

    "("  desplazar e ir al estado 29


Estado 18

   17 statement: "read" • "(" read_list ")"

    "("  desplazar e ir al estado 30


Estado 19

   15 statement: "while" • "(" expression ")" statement

    "("  desplazar e ir al estado 31


Estado 20

   12 statement: "{" • statement_list "}"

    $default  reduce usando la regla 10 (statement_list)

    statement_list  ir al estado 32


Estado 21

    1 program: "id" "(" ")" "{" declarations statement_list "}" •

    $default  reduce usando la regla 1 (program)


Estado 22

    9 statement_list: statement_list statement •

    $default  reduce usando la regla 9 (statement_list)


Estado 23

    8 identifier: "id" "=" • expression

    "id"      desplazar e ir al estado 33
    "-"       desplazar e ir al estado 34
    "("       desplazar e ir al estado 35
    "numero"  desplazar e ir al estado 36

    expression  ir al estado 37


Estado 24

    6 identifier_list: identifier_list "," • identifier

    "id"  desplazar e ir al estado 11

    identifier  ir al estado 38


Estado 25

    2 declarations: declarations "var" identifier_list ";" •

    $default  reduce usando la regla 2 (declarations)


Estado 26

    3 declarations: declarations "const" identifier_list ";" •

    $default  reduce usando la regla 3 (declarations)


Estado 27

   11 statement: "id" "=" • expression ";"

    "id"      desplazar e ir al estado 33
    "-"       desplazar e ir al estado 34
    "("       desplazar e ir al estado 35
    "numero"  desplazar e ir al estado 36

    expression  ir al estado 39


Estado 28

   16 statement: "print" "(" • print_list ")" ";"

    "id"      desplazar e ir al estado 33
    "-"       desplazar e ir al estado 34
    "("       desplazar e ir al estado 35
    "numero"  desplazar e ir al estado 36
    "string"  desplazar e ir al estado 40

    print_list  ir al estado 41
    print_item  ir al estado 42
    expression  ir al estado 43


Estado 29

   13 statement: "if" "(" • expression ")" statement "else" statement
   14          | "if" "(" • expression ")" statement

    "id"      desplazar e ir al estado 33
    "-"       desplazar e ir al estado 34
    "("       desplazar e ir al estado 35
    "numero"  desplazar e ir al estado 36

    expression  ir al estado 44


Estado 30

   17 statement: "read" "(" • read_list ")"

    "id"  desplazar e ir al estado 45

    read_list  ir al estado 46


Estado 31

   15 statement: "while" "(" • expression ")" statement

    "id"      desplazar e ir al estado 33
    "-"       desplazar e ir al estado 34
    "("       desplazar e ir al estado 35
    "numero"  desplazar e ir al estado 36

    expression  ir al estado 47


Estado 32

    9 statement_list: statement_list • statement
   12 statement: "{" statement_list • "}"

    "id"     desplazar e ir al estado 15
    "print"  desplazar e ir al estado 16
    "if"     desplazar e ir al estado 17
    "read"   desplazar e ir al estado 18
    "while"  desplazar e ir al estado 19
    "{"      desplazar e ir al estado 20
    "}"      desplazar e ir al estado 48

    statement  ir al estado 22


Estado 33

   30 expression: "id" •

    $default  reduce usando la regla 30 (expression)


Estado 34

   28 expression: "-" • expression

    "id"      desplazar e ir al estado 33
    "-"       desplazar e ir al estado 34
    "("       desplazar e ir al estado 35
    "numero"  desplazar e ir al estado 36

    expression  ir al estado 49


Estado 35

   29 expression: "(" • expression ")"

    "id"      desplazar e ir al estado 33
    "-"       desplazar e ir al estado 34
    "("       desplazar e ir al estado 35
    "numero"  desplazar e ir al estado 36

    expression  ir al estado 50


Estado 36

   31 expression: "numero" •

    $default  reduce usando la regla 31 (expression)


Estado 37

    8 identifier: "id" "=" expression •
   24 expression: expression • "+" expression
   25           | expression • "-" expression
   26           | expression • "*" expression
   27           | expression • "/" expression

    "+"  desplazar e ir al estado 51
    "-"  desplazar e ir al estado 52
    "*"  desplazar e ir al estado 53
    "/"  desplazar e ir al estado 54

    $default  reduce usando la regla 8 (identifier)


Estado 38

    6 identifier_list: identifier_list "," identifier •

    $default  reduce usando la regla 6 (identifier_list)


Estado 39

   11 statement: "id" "=" expression • ";"
   24 expression: expression • "+" expression
   25           | expression • "-" expression
   26           | expression • "*" expression
   27           | expression • "/" expression

    "+"  desplazar e ir al estado 51
    "-"  desplazar e ir al estado 52
    "*"  desplazar e ir al estado 53
    "/"  desplazar e ir al estado 54
    ";"  desplazar e ir al estado 55


Estado 40

   21 print_item: "string" •

    $default  reduce usando la regla 21 (print_item)


Estado 41

   16 statement: "print" "(" print_list • ")" ";"
   19 print_list: print_list • "," print_item

    ","  desplazar e ir al estado 56
    ")"  desplazar e ir al estado 57


Estado 42

   18 print_list: print_item •

    $default  reduce usando la regla 18 (print_list)


Estado 43

   20 print_item: expression •
   24 expression: expression • "+" expression
   25           | expression • "-" expression
   26           | expression • "*" expression
   27           | expression • "/" expression

    "+"  desplazar e ir al estado 51
    "-"  desplazar e ir al estado 52
    "*"  desplazar e ir al estado 53
    "/"  desplazar e ir al estado 54

    $default  reduce usando la regla 20 (print_item)


Estado 44

   13 statement: "if" "(" expression • ")" statement "else" statement
   14          | "if" "(" expression • ")" statement
   24 expression: expression • "+" expression
   25           | expression • "-" expression
   26           | expression • "*" expression
   27           | expression • "/" expression

    "+"  desplazar e ir al estado 51
    "-"  desplazar e ir al estado 52
    "*"  desplazar e ir al estado 53
    "/"  desplazar e ir al estado 54
    ")"  desplazar e ir al estado 58


Estado 45

   22 read_list: "id" •

    $default  reduce usando la regla 22 (read_list)


Estado 46

   17 statement: "read" "(" read_list • ")"
   23 read_list: read_list • "," "id"

    ","  desplazar e ir al estado 59
    ")"  desplazar e ir al estado 60


Estado 47

   15 statement: "while" "(" expression • ")" statement
   24 expression: expression • "+" expression
   25           | expression • "-" expression
   26           | expression • "*" expression
   27           | expression • "/" expression

    "+"  desplazar e ir al estado 51
    "-"  desplazar e ir al estado 52
    "*"  desplazar e ir al estado 53
    "/"  desplazar e ir al estado 54
    ")"  desplazar e ir al estado 61


Estado 48

   12 statement: "{" statement_list "}" •

    $default  reduce usando la regla 12 (statement)


Estado 49

   24 expression: expression • "+" expression
   25           | expression • "-" expression
   26           | expression • "*" expression
   27           | expression • "/" expression
   28           | "-" expression •

    $default  reduce usando la regla 28 (expression)


Estado 50

   24 expression: expression • "+" expression
   25           | expression • "-" expression
   26           | expression • "*" expression
   27           | expression • "/" expression
   29           | "(" expression • ")"

    "+"  desplazar e ir al estado 51
    "-"  desplazar e ir al estado 52
    "*"  desplazar e ir al estado 53
    "/"  desplazar e ir al estado 54
    ")"  desplazar e ir al estado 62


Estado 51

   24 expression: expression "+" • expression

    "id"      desplazar e ir al estado 33
    "-"       desplazar e ir al estado 34
    "("       desplazar e ir al estado 35
    "numero"  desplazar e ir al estado 36

    expression  ir al estado 63


Estado 52

   25 expression: expression "-" • expression

    "id"      desplazar e ir al estado 33
    "-"       desplazar e ir al estado 34
    "("       desplazar e ir al estado 35
    "numero"  desplazar e ir al estado 36

    expression  ir al estado 64


Estado 53

   26 expression: expression "*" • expression

    "id"      desplazar e ir al estado 33
    "-"       desplazar e ir al estado 34
    "("       desplazar e ir al estado 35
    "numero"  desplazar e ir al estado 36

    expression  ir al estado 65


Estado 54

   27 expression: expression "/" • expression

    "id"      desplazar e ir al estado 33
    "-"       desplazar e ir al estado 34
    "("       desplazar e ir al estado 35
    "numero"  desplazar e ir al estado 36

    expression  ir al estado 66


Estado 55

   11 statement: "id" "=" expression ";" •

    $default  reduce usando la regla 11 (statement)


Estado 56

   19 print_list: print_list "," • print_item

    "id"      desplazar e ir al estado 33
    "-"       desplazar e ir al estado 34
    "("       desplazar e ir al estado 35
    "numero"  desplazar e ir al estado 36
    "string"  desplazar e ir al estado 40

    print_item  ir al estado 67
    expression  ir al estado 43


Estado 57

   16 statement: "print" "(" print_list ")" • ";"

    ";"  desplazar e ir al estado 68


Estado 58

   13 statement: "if" "(" expression ")" • statement "else" statement
   14          | "if" "(" expression ")" • statement

    "id"     desplazar e ir al estado 15
    "print"  desplazar e ir al estado 16
    "if"     desplazar e ir al estado 17
    "read"   desplazar e ir al estado 18
    "while"  desplazar e ir al estado 19
    "{"      desplazar e ir al estado 20

    statement  ir al estado 69


Estado 59

   23 read_list: read_list "," • "id"

    "id"  desplazar e ir al estado 70


Estado 60

   17 statement: "read" "(" read_list ")" •

    $default  reduce usando la regla 17 (statement)


Estado 61

   15 statement: "while" "(" expression ")" • statement

    "id"     desplazar e ir al estado 15
    "print"  desplazar e ir al estado 16
    "if"     desplazar e ir al estado 17
    "read"   desplazar e ir al estado 18
    "while"  desplazar e ir al estado 19
    "{"      desplazar e ir al estado 20

    statement  ir al estado 71


Estado 62

   29 expression: "(" expression ")" •

    $default  reduce usando la regla 29 (expression)


Estado 63

   24 expression: expression • "+" expression
   24           | expression "+" expression •
   25           | expression • "-" expression
   26           | expression • "*" expression
   27           | expression • "/" expression

    "*"  desplazar e ir al estado 53
    "/"  desplazar e ir al estado 54

    $default  reduce usando la regla 24 (expression)


Estado 64

   24 expression: expression • "+" expression
   25           | expression • "-" expression
   25           | expression "-" expression •
   26           | expression • "*" expression
   27           | expression • "/" expression

    "*"  desplazar e ir al estado 53
    "/"  desplazar e ir al estado 54

    $default  reduce usando la regla 25 (expression)


Estado 65

   24 expression: expression • "+" expression
   25           | expression • "-" expression
   26           | expression • "*" expression
   26           | expression "*" expression •
   27           | expression • "/" expression

    $default  reduce usando la regla 26 (expression)


Estado 66

   24 expression: expression • "+" expression
   25           | expression • "-" expression
   26           | expression • "*" expression
   27           | expression • "/" expression
   27           | expression "/" expression •

    $default  reduce usando la regla 27 (expression)


Estado 67

   19 print_list: print_list "," print_item •

    $default  reduce usando la regla 19 (print_list)


Estado 68

   16 statement: "print" "(" print_list ")" ";" •

    $default  reduce usando la regla 16 (statement)


Estado 69

   13 statement: "if" "(" expression ")" statement • "else" statement
   14          | "if" "(" expression ")" statement •

    "else"  desplazar e ir al estado 72

    "else"    [reduce usando la regla 14 (statement)]
    $default  reduce usando la regla 14 (statement)


Estado 70

   23 read_list: read_list "," "id" •

    $default  reduce usando la regla 23 (read_list)


Estado 71

   15 statement: "while" "(" expression ")" statement •

    $default  reduce usando la regla 15 (statement)


Estado 72

   13 statement: "if" "(" expression ")" statement "else" • statement

    "id"     desplazar e ir al estado 15
    "print"  desplazar e ir al estado 16
    "if"     desplazar e ir al estado 17
    "read"   desplazar e ir al estado 18
    "while"  desplazar e ir al estado 19
    "{"      desplazar e ir al estado 20

    statement  ir al estado 73


Estado 73

   13 statement: "if" "(" expression ")" statement "else" statement •

    $default  reduce usando la regla 13 (statement)
